[gd_scene load_steps=14 format=3 uid="uid://b7dks5cm1l8lb"]

[ext_resource type="Script" path="res://prefab/interface/Interface.gd" id="1_ghaf7"]
[ext_resource type="PackedScene" uid="uid://j0mixjoaji6r" path="res://prefab/UI/DevPanel.tscn" id="2_0344k"]
[ext_resource type="PackedScene" uid="uid://cc4dqpbjt2x3y" path="res://prefab/UI/Questlog.tscn" id="2_ka8y8"]
[ext_resource type="PackedScene" uid="uid://ctrto7ocrqsyu" path="res://prefab/UI/StatHUD.tscn" id="3_1qqj3"]
[ext_resource type="PackedScene" uid="uid://brxe6x2arf7xb" path="res://prefab/UI/PauseMenu.tscn" id="3_6p8ro"]
[ext_resource type="PackedScene" uid="uid://4pvo7rk61tca" path="res://prefab/UI/DialogBox.tscn" id="4_nv8pa"]
[ext_resource type="PackedScene" uid="uid://ci8ut3tki2bpo" path="res://prefab/UI/InfoBox.tscn" id="5_1eql3"]
[ext_resource type="PackedScene" uid="uid://cfbtmo61dtd0j" path="res://prefab/UI/CharacterPanel.tscn" id="5_6wngu"]
[ext_resource type="PackedScene" uid="uid://ckoys4dftebte" path="res://prefab/UI/DeathScreen.tscn" id="7_bo1t5"]
[ext_resource type="PackedScene" uid="uid://cfsnddkshv6p8" path="res://prefab/UI/PotionPanel.tscn" id="10_p40cy"]

[sub_resource type="Animation" id="Animation_x5qxj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3kh7f"]
resource_name = "start_transition"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.4, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"transition_is_black"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yur8n"]
_data = {
"RESET": SubResource("Animation_x5qxj"),
"start_transition": SubResource("Animation_3kh7f")
}

[node name="Interface" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ghaf7")
show_devpanel = true

[node name="Questlog" parent="." instance=ExtResource("2_ka8y8")]
visible = false
anchor_left = 0.021875
anchor_top = 0.144444
anchor_right = 0.68125
anchor_bottom = 0.861111
offset_right = 211.0
offset_bottom = 129.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="StatHUD" parent="." instance=ExtResource("3_1qqj3")]
visible = false
offset_right = -226.0
offset_bottom = -163.0

[node name="PotionPanel" parent="." instance=ExtResource("10_p40cy")]
offset_left = -43.0
offset_top = -27.0
offset_right = 35.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)

[node name="DevPanel" parent="." instance=ExtResource("2_0344k")]

[node name="CharacterPanel" parent="." instance=ExtResource("5_6wngu")]
offset_left = 23.0
offset_top = 47.0
offset_right = -91.0
offset_bottom = 47.0
scale = Vector2(0.5, 0.5)

[node name="DialogBox" parent="." instance=ExtResource("4_nv8pa")]
offset_left = 80.0
offset_top = 103.0
offset_right = 80.0
offset_bottom = 67.0
scale = Vector2(0.5, 0.5)

[node name="InfoBox" parent="." instance=ExtResource("5_1eql3")]
anchors_preset = 10
anchor_bottom = 0.0
offset_left = 80.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 78.0
grow_vertical = 1
scale = Vector2(0.5, 0.5)

[node name="DeathScreen" parent="." instance=ExtResource("7_bo1t5")]

[node name="PauseMenu" parent="." instance=ExtResource("3_6p8ro")]
visible = false
offset_left = 131.0
offset_top = 50.0
offset_right = -112.0
offset_bottom = -27.0
scale = Vector2(0.75, 0.75)

[node name="Transition" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yur8n")
}
